16. Jun 2011 Christoph Thielecke <crissi99@gmx.de>
	- import media type (dvd) on whereisit xml import fixed

22. May 2011 Christoph Thielecke <crissi99@gmx.de>
	- strip trailing lineend and spaces from comment at loading catalog
	- dont replace lineend with '#' on edit comment

22. May 2011 Christoph Thielecke <crissi99@gmx.de>
	- export all requested fields if export only media fixed
	- export media name if export only media fixed
	- export category on csv and html added
	- edit node comment/category fixed
	- added modified patch for importing from advanced disk catalog from zzarko which improves parsing

21. May 2011 Christoph Thielecke <crissi99@gmx.de>
	- patch for keyboard accel on adddialog added (thanks to lis6502@gmail.com and tadzikes@gmail.com)
	- allow to export only media name on csv export
	- export media name at csv export too (fixes: 3302225)
	- parsing xml content fixed (fixes: 3302226)
	- comment linebreak length increased to 80
	- category linebreak length increased to 80
	- allow to change sorting dir tree to descending/ascending (fixes request 3190058)
	- parsing size from xml fixed

08. Mar 2011 Christoph Thielecke <crissi99@gmx.de>
	- version changed to 1.2

07. Mar 2011 Christoph Thielecke <crissi99@gmx.de>
	- speedup parsing a little bit

06. Mar 2011 Christoph Thielecke <crissi99@gmx.de>
	- import report generated advanced disk dialog fixed if file type was not given

05. Mar 2011 Christoph Thielecke <crissi99@gmx.de>
	- restore normal cursor on save new created catalog fixed
	- empty media name if auto mount is disabled fixed

23. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- scan cdrom path if not automount fixed

21. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- context menu option for changing media type added
	- save as now adds history item

10. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- unsharp search option in find dialog added

05. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- crash caused divide by zero fixed
