@@ -1,5 +1,6 @@
 16. Jun 2011 Christoph Thielecke <crissi99@gmx.de>
 	- import media type (dvd) on whereisit xml import fixed
+	- add file extension in whereisit xml import if nessary
 
 22. May 2011 Christoph Thielecke <crissi99@gmx.de>
 	- strip trailing lineend and spaces from comment at loading catalog
